2009-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Print how tape_length is computed.

2009-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix for configured with CLIENT_LOGIN=root
	* man/xml-source/amanda-client.conf.5.xml: Typo.
	* man/xml-source/amanda.conf.5.xml: Add ssh_keys.

2009-06-11  Nikolas Coukouma <atrus@zmanda.com>
	* amar-src/amar.c, amar-src/amar.h, amar-src/amarchiver.c,
	  common-src/glib-util.c, common-src/glib-util.h, common-src/queueing.c,
	  common-src/queueing.h, common-src/semaphore-test.c,
	  common-src/semaphore.c, common-src/semaphore.h,
	  config/automake/scripts.am, config/automake/vars.am,
	  device-src/device-queueing.c, device-src/device-queueing.h,
	  device-src/device.c, device-src/device.h, device-src/null-device.c,
	  device-src/property.c, device-src/property.h,
	  device-src/rait-device.c, device-src/s3-device.c,
	  device-src/s3-util.c, device-src/s3-util.h, device-src/s3.c,
	  device-src/s3.h, device-src/tape-aix.c, device-src/tape-device.c,
	  device-src/tape-device.h, device-src/tape-ops.h,
	  device-src/tape-posix.c, device-src/tape-uware.c,
	  device-src/tape-xenix.c, device-src/vfs-device.c,
	  device-src/vfs-test.c, device-src/xfer-dest-device.c,
	  device-src/xfer-dest-taper.c, device-src/xfer-device.h,
	  device-src/xfer-source-device.c, perl/Amanda/Application.pod,
	  perl/Amanda/Application.swg, perl/Amanda/Application/Zfs.pm,
	  perl/Amanda/Archive.pod, perl/Amanda/Archive.swg,
	  perl/Amanda/BigIntCompat.pm, perl/Amanda/Changer.pm,
	  perl/Amanda/Changer/compat.pm, perl/Amanda/Changer/disk.pm,
	  perl/Amanda/Changer/null.pm, perl/Amanda/Changer/rait.pm,
	  perl/Amanda/Changer/single.pm, perl/Amanda/Cmdline.pod,
	  perl/Amanda/Cmdline.swg, perl/Amanda/Config.pod,
	  perl/Amanda/Config.swg, perl/Amanda/Constants.pm.in,
	  perl/Amanda/Debug.pod, perl/Amanda/Debug.swg, perl/Amanda/Device.pod,
	  perl/Amanda/Device.swg, perl/Amanda/Disklist.pod,